@@ -169,7 +169,7 @@ same level.)
 	~ Monorail guy, Simpsons
 
 -->
-<plotscript version="wip" datecode="2021-11-13">
+<plotscript version="wip" datecode="2022-01-22">
 
 	<section title="Declarations">
 		<command id="plotscript">
@@ -3759,6 +3759,25 @@ fade screen in</example>
 			</seealso>
 		</command>
 		</section>		<!-- Hero Graphics-->
+
+		<section title="Hero Battle Settings">
+		<command id="getheroautobattle">
+			<canon>get hero auto battle (who)</canon>
+			<shortname>get hero auto battle</shortname>
+			<description>Returns true if the hero is set to fight automatically in battles, or false if the hero will be under normal player control. The hero number should be the hero's position in the battle party (not the name or caterpillar rank)</description>
+			<seealso>
+				<ref>setheroautobattle</ref>
+			</seealso>
+		</command>
+		<command id="setheroautobattle">
+			<canon>set hero auto battle (who, bool)</canon>
+			<shortname>set hero auto battle</shortname>
+			<description>Changes whether or not the hero should fight automatically in battles (true), or if the hero will be under normal player control (false). The hero number should be the hero's position in the battle party (not the name or caterpillar rank)</description>
+			<seealso>
+				<ref>getheroautobattle</ref>
+			</seealso>
+		</command>
+		</section>		<!-- Hero Battle Settings -->
 
 		<section title="Hero Hand Position">
 		<command id="getherohandx">
