@@ -73,6 +73,7 @@ TYPE HeroState
  elementals(maxElements - 1) as single
  hand_pos(1) as XYPair
  hand_pos_overridden as bool  'YES if hand_pos has been set by a script, so should be saved and not reloaded
+ auto_battle as bool
 END TYPE
 
 TYPE HeroWalkabout
