@@ -5070,6 +5070,17 @@ SUB script_functions(byval cmdid as integer)
   set_global_sfx_volume bound(retvals(0), 0, 255) / 255
  CASE 727 '--heal party ([revive dead heroes])
   innRestore retvals(0)  '-2 means default
+ CASE 728 '--set hero auto battle (who, bool)
+  IF valid_hero_party(retvals(0)) THEN
+   DIM heronum as integer = bound(retvals(0), 0, 40)
+   gam.hero(heronum).auto_battle = retvals(1) <> 0
+  END IF
+ CASE 729 '--get hero auto battle (who)
+  IF valid_hero_party(retvals(0)) THEN
+   DIM heronum as integer = bound(retvals(0), 0, 40)
+   scriptret = IIF(gam.hero(heronum).auto_battle, 1, 0)
+  END IF
+
 
  CASE ELSE
   'We also check the HSP header at load time to check there aren't unsupported commands
